tree-sitter-simplex/grammar.js
    source_file: $ => repeat($._item),

    _item: $ => choice(
      $.function_definition,
      $.struct_definition,
      $.enum_definition,
      $.trait_definition,
      $.impl_block,
      $.type_alias,
      $.const_declaration,
      $.static_declaration,
      $.use_declaration,
      $.mod_declaration,
      $.extern_block,
      $.actor_definition,
      $.specialist_definition,
      $.hive_definition,
      $.anima_definition,
    ),

    // =========================================================================
    // Visibility
    // =========================================================================

    visibility: $ => 'pub',

    // =========================================================================
    // Attributes
    // =========================================================================

    function_definition: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.generic_parameters),
      $.parameters,
      optional(seq('->', field('return_type', $.type))),
      optional($.where_clause),
      field('body', $.block),
    ),

    parameters: $ => seq(
      '(',
      optional(sepBy(',', $.parameter)),
      optional(','),
      ')',
    ),

    parameter: $ => choice(
      $.self_parameter,
      $.typed_parameter,
    ),

    self_parameter: $ => seq(
      optional('&'),
      optional('mut'),
      'self',
    ),

    typed_parameter: $ => seq(
      optional('mut'),
      field('name', $.identifier),
      ':',
      field('type', $.type),
    ),

    // =========================================================================
    // Generic Parameters
    // =========================================================================

    struct_definition: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      'struct',
      field('name', $._type_identifier),
      optional($.generic_parameters),
      optional($.where_clause),
      choice(
        $.struct_body,
        $.tuple_struct_body,
        ';',
      ),
    ),

    struct_body: $ => seq(
      '{',
      optional(sepBy(',', $.struct_field)),
      optional(','),
      '}',
    ),

    struct_field: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      field('name', $._field_identifier),
      ':',
      field('type', $.type),
    ),

    enum_definition: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      'enum',
      field('name', $._type_identifier),
      optional($.generic_parameters),
      optional($.where_clause),
      $.enum_body,
    ),

    enum_body: $ => seq(
      '{',
      optional(sepBy(',', $.enum_variant)),
      optional(','),
      '}',
    ),

    enum_variant: $ => seq(
      repeat($.attribute),
      field('name', $.identifier),
      optional(choice(
        $.enum_variant_tuple,
        $.enum_variant_struct,
        seq('=', $._expression),
      )),
    ),

    enum_variant_tuple: $ => seq(
      '(',
      optional(sepBy(',', $.type)),
      optional(','),
      ')',
    ),

    trait_definition: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      'trait',
      field('name', $._type_identifier),
      optional($.generic_parameters),
      optional(seq(':', $.trait_bounds)),
      optional($.where_clause),
      $.trait_body,
    ),

    trait_body: $ => seq(
      '{',
      repeat($.trait_item),
      '}',
    ),

    trait_item: $ => choice(
      $.function_signature,
      $.function_definition,
      $.type_alias_signature,
      $.const_declaration,
    ),

    function_signature: $ => seq(
      repeat($.attribute),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.generic_parameters),
      $.parameters,
      optional(seq('->', field('return_type', $.type))),
      optional($.where_clause),
      ';',
    ),

    impl_block: $ => seq(
      repeat($.attribute),
      'impl',
      optional($.generic_parameters),
      optional(seq(
        field('trait', $.type),
        'for',
      )),
      field('type', $.type),
      optional($.where_clause),
      $.impl_body,
    ),

    impl_body: $ => seq(
      '{',
      repeat(choice(
        $.function_definition,
        $.type_alias,
        $.const_declaration,
      )),
      '}',
    ),

    // =========================================================================
    // Type Alias
    // =========================================================================

    type_alias: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      'type',
      field('name', $._type_identifier),
      optional($.generic_parameters),
      '=',
      field('type', $.type),
      ';',
    ),

    // =========================================================================
    // Constants and Statics
    // =========================================================================

    const_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      'const',
      field('name', $.identifier),
      ':',
      field('type', $.type),
      '=',
      field('value', $._expression),
      ';',
    ),

    use_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      'use',
      $.use_tree,
      ';',
    ),

    use_tree: $ => choice(
      seq(optional(seq($.path, '::')), '*'),
      seq(optional(seq($.path, '::')), $.use_group),
      seq($.path, optional(seq('as', $.identifier))),
    ),

    actor_definition: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      'actor',
      field('name', $._type_identifier),
      optional($.generic_parameters),
      $.actor_body,
    ),

    actor_body: $ => seq(
      '{',
      repeat(choice(
        $.actor_field,
        $.receive_handler,
        $.function_definition,
      )),
      '}',
    ),

    actor_field: $ => seq(
      optional($.visibility),
      choice('let', 'var'),
      field('name', $.identifier),
      ':',
      field('type', $.type),
      optional(seq('=', $._expression)),
      choice(';', ','),
    ),

    receive_handler: $ => seq(
      'receive',
      field('message', $.identifier),
      $.parameters,
      optional(seq('->', field('return_type', $.type))),
      $.block,
    ),

    // =========================================================================
    // AI-Native Features (Simplex-specific)
    // =========================================================================

    specialist_definition: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      'specialist',
      field('name', $._type_identifier),
      $.specialist_body,
    ),

    specialist_body: $ => seq(
      '{',
      repeat(choice(
        $.specialist_config,
        $.function_definition,
      )),
      '}',
    ),

    specialist_config: $ => seq(
      field('key', $.identifier),
      ':',
      field('value', $._expression),
      ',',
    ),

    type: $ => choice(
      $.primitive_type,
      $.reference_type,
      $.pointer_type,
      $.array_type,
      $.slice_type,
      $.tuple_type,
      $.function_type,
      $.generic_type,
      $.path,
      $.unit_type,
      $.dyn_type,
      $.self_type,
    ),

    primitive_type: $ => choice(
      'i8', 'i16', 'i32', 'i64', 'i128', 'isize',
      'u8', 'u16', 'u32', 'u64', 'u128', 'usize',
      'f32', 'f64',
      'bool',
      'char',
      'str',
      'String',
    ),

    tuple_type: $ => seq(
      '(',
      sepBy(',', $.type),
      optional(','),
      ')',
    ),

    generic_type: $ => seq(
      $.path,
      $.type_arguments,
    ),

    type_arguments: $ => seq(
      '<',
      sepBy(',', choice($.type, $.lifetime)),
      optional(','),
      '>',
    ),

    pattern: $ => choice(
      $.identifier_pattern,
      $.wildcard_pattern,
      $.literal_pattern,
      $.tuple_pattern,
      $.struct_pattern,
      $.enum_pattern,
      $.or_pattern,
      $.ref_pattern,
      $.range_pattern,
      $.rest_pattern,
    ),

    identifier_pattern: $ => seq(
      optional('mut'),
      $.identifier,
    ),

    enum_pattern: $ => seq(
      $.path,
      optional(choice(
        seq('(', optional(sepBy(',', $.pattern)), optional(','), ')'),
        seq('{', optional(sepBy(',', $.field_pattern)), optional(','), '}'),
      )),
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),
      '}',
    ),

    _statement: $ => choice(
      $.let_statement,
      $.expression_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.empty_statement,
    ),

    let_statement: $ => seq(
      choice('let', 'var'),
      optional('mut'),
      field('pattern', $.pattern),
      optional(seq(':', field('type', $.type))),
      optional(seq('=', field('value', $._expression))),
      ';',
    ),

    expression_statement: $ => seq(
      $._expression,
      ';',
    ),

    _expression: $ => choice(
      $.identifier,
      $.path,
      $._literal,
      $.unary_expression,
      $.binary_expression,
      $.comparison_expression,
      $.logical_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_expression,
      $.index_expression,
      $.array_expression,
      $.tuple_expression,
      $.struct_expression,
      $.parenthesized_expression,
      $.block,
      $.if_expression,
      $.match_expression,
      $.for_expression,
      $.while_expression,
      $.loop_expression,
      $.closure_expression,
      $.range_expression,
      $.try_expression,
      $.await_expression,
      $.spawn_expression,
      $.send_expression,
      $.ask_expression,
      $.infer_expression,
      $.cast_expression,
      $.reference_expression,
      $.dereference_expression,
    ),

    binary_expression: $ => choice(
      prec.left('multiplicative', seq($._expression, '*', $._expression)),
      prec.left('multiplicative', seq($._expression, '/', $._expression)),
      prec.left('multiplicative', seq($._expression, '%', $._expression)),
      prec.left('additive', seq($._expression, '+', $._expression)),
      prec.left('additive', seq($._expression, '-', $._expression)),
      prec.left('shift', seq($._expression, '<<', $._expression)),
      prec.left('shift', seq($._expression, '>>', $._expression)),
      prec.left('bitwise_and', seq($._expression, '&', $._expression)),
      prec.left('bitwise_xor', seq($._expression, '^', $._expression)),
      prec.left('bitwise_or', seq($._expression, '|', $._expression)),
    ),

    comparison_expression: $ => prec.left('compare', seq(
      $._expression,
      choice('==', '!=', '<', '>', '<=', '>='),
      $._expression,
    )),

    logical_expression: $ => choice(
      prec.left('and', seq($._expression, '&&', $._expression)),
      prec.left('or', seq($._expression, '||', $._expression)),
    ),

    assignment_expression: $ => prec.right('assign', seq(
      field('left', $._expression),
      '=',
      field('right', $._expression),
    )),

    call_expression: $ => prec('call', seq(
      field('function', $._expression),
      $.arguments,
    )),

    arguments: $ => seq(
      '(',
      optional(sepBy(',', $._expression)),
      optional(','),
      ')',
    ),

    method_call_expression: $ => prec('call', seq(
      field('receiver', $._expression),
      '.',
      field('method', $.identifier),
      optional($.type_arguments),
      $.arguments,
    )),

    field_expression: $ => prec('field', seq(
      field('receiver', $._expression),
      '.',
      field('field', choice($.identifier, $.integer_literal)),
    )),

    struct_expression: $ => seq(
      field('name', $.path),
      '{',
      optional(sepBy(',', $.struct_expression_field)),
      optional(','),
      '}',
    ),

    if_expression: $ => seq(
      'if',
      optional('let'),
      optional(seq($.pattern, '=')),
      field('condition', $._expression),
      field('consequence', $.block),
      optional(seq(
        'else',
        field('alternative', choice($.block, $.if_expression)),
      )),
    ),

    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      '{',
      optional(sepBy(',', $.match_arm)),
      optional(','),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $.pattern),
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('body', choice($._expression, $.block)),
    ),

    for_expression: $ => seq(
      'for',
      field('pattern', $.pattern),
      'in',
      field('iterable', $._expression),
      field('body', $.block),
    ),

    while_expression: $ => seq(
      'while',
      optional('let'),
      optional(seq($.pattern, '=')),
      field('condition', $._expression),
      field('body', $.block),
    ),

    closure_expression: $ => seq(
      optional('move'),
      $.closure_parameters,
      optional(seq('->', $.type)),
      choice(
        $._expression,
        $.block,
      ),
    ),

    closure_parameters: $ => seq(
      '|',
      optional(sepBy(',', $.closure_parameter)),
      optional(','),
      '|',
    ),

    closure_parameter: $ => seq(
      optional('mut'),
      field('name', $.identifier),
      optional(seq(':', field('type', $.type))),
    ),

    range_expression: $ => prec.left('compare', choice(
      seq($._expression, '..', $._expression),
      seq($._expression, '..=', $._expression),
      seq($._expression, '..'),
      seq('..', $._expression),
      seq('..=', $._expression),
      '..',
    )),

    try_expression: $ => prec('unary', seq(
      $._expression,
      '?',
    )),

    await_expression: $ => prec('field', seq(
      $._expression,
      '.',
      'await',
    )),

    // Simplex-specific expressions
    spawn_expression: $ => seq(
      'spawn',
      $._expression,
    ),

    send_expression: $ => seq(
      'send',
      '(',
      field('target', $._expression),
      ',',
      field('message', $._expression),
      ')',
    ),

    infer_expression: $ => seq(
      'infer',
      '(',
      field('prompt', $._expression),
      ')',
    ),

    integer_literal: $ => token(choice(
      // Decimal
      /[0-9][0-9_]*/,
      // Hexadecimal
      /0[xX][0-9a-fA-F_]+/,
      // Octal
      /0[oO][0-7_]+/,
      // Binary
      /0[bB][01_]+/,
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        /[^"\\]+/,
      )),
      '"',
    ),

    path: $ => prec.left(seq(
      optional(choice('::', $.path_segment)),
      repeat1(seq('::', $.path_segment)),
    )),

    path_segment: $ => seq(
      $.identifier,
      optional($.type_arguments),
    ),

    // =========================================================================
    // Identifiers
    // =========================================================================

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    _type_identifier: $ => alias($.identifier, $.type_identifier),

    _field_identifier: $ => alias($.identifier, $.field_identifier),

    // =========================================================================
    // Comments
    // =========================================================================
