tree-sitter-simplex/test/corpus/expressions.txt
================================================================================
Let statement
================================================================================

fn test() {
    let x: i64 = 42;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        type: (type
          (primitive_type))
        value: (integer_literal)))))

================================================================================
Mutable variable
================================================================================

fn test() {
    var count = 0;
    count = count + 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        value: (integer_literal))
      (expression_statement
        (assignment_expression
          left: (identifier)
          right: (binary_expression
            (identifier)
            (integer_literal)))))))

================================================================================
If expression
================================================================================

fn test() {
    if x > 0 {
        1
    } else {
        0
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (if_expression
        condition: (comparison_expression
          (identifier)
          (integer_literal))
        consequence: (block
          (integer_literal))
        alternative: (block
          (integer_literal))))))

================================================================================
Match expression
================================================================================

fn test() {
    match opt {
        Some(x) => x,
        None => 0,
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (match_expression
        value: (identifier)
        (match_arm
          pattern: (pattern
            (enum_pattern
              (path
                (path_segment
                  (identifier)))
              (pattern
                (identifier_pattern
                  (identifier)))))
          body: (identifier))
        (match_arm
          pattern: (pattern
            (enum_pattern
              (path
                (path_segment
                  (identifier)))))
          body: (integer_literal))))))

================================================================================
For loop
================================================================================

fn test() {
    for i in 0..10 {
        print(i);
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (for_expression
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        iterable: (range_expression
          (integer_literal)
          (integer_literal))
        body: (block
          (expression_statement
            (call_expression
              function: (identifier)
              (arguments
                (identifier)))))))))

================================================================================
While loop
================================================================================

fn test() {
    while i < 10 {
        i = i + 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (while_expression
        condition: (comparison_expression
          (identifier)
          (integer_literal))
        body: (block
          (expression_statement
            (assignment_expression
              left: (identifier)
              right: (binary_expression
                (identifier)
                (integer_literal)))))))))

================================================================================
Closure expression
================================================================================

fn test() {
    let add = |a: i64, b: i64| { a + b };
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        value: (closure_expression
          (closure_parameters
            (closure_parameter
              name: (identifier)
              type: (type
                (primitive_type)))
            (closure_parameter
              name: (identifier)
              type: (type
                (primitive_type))))
          (block
            (binary_expression
              (identifier)
              (identifier))))))))

================================================================================
Method call
================================================================================

fn test() {
    list.push(42);
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (expression_statement
        (method_call_expression
          receiver: (identifier)
          method: (identifier)
          (arguments
            (integer_literal)))))))

================================================================================
Await expression
================================================================================

fn test() {
    let result = fetch().await;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        value: (await_expression
          (call_expression
            function: (identifier)
            (arguments)))))))

================================================================================
Try expression
================================================================================

fn test() -> Result<i64, String> {
    let x = fallible()?;
    Ok(x)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    return_type: (type
      (generic_type
        (path
          (path_segment
            (identifier)))
        (type_arguments
          (type
            (primitive_type))
          (type
            (primitive_type)))))
    body: (block
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        value: (try_expression
          (call_expression
            function: (identifier)
            (arguments))))
      (call_expression
        function: (identifier)
        (arguments
          (identifier))))))

================================================================================
Spawn expression
================================================================================

fn test() {
    let actor = spawn Counter {};
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        value: (spawn_expression
          (struct_expression
            name: (path
              (path_segment
                (identifier)))))))))

================================================================================
Send expression
================================================================================

fn test() {
    send(actor, Message());
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (expression_statement
        (send_expression
          target: (identifier)
          message: (call_expression
            function: (identifier)
            (arguments)))))))

================================================================================
Binary operators
================================================================================

fn test() {
    let a = 1 + 2 * 3;
    let b = x && y || z;
    let c = a << 2 | b;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        value: (binary_expression
          (integer_literal)
          (binary_expression
            (integer_literal)
            (integer_literal))))
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        value: (logical_expression
          (logical_expression
            (identifier)
            (identifier))
          (identifier)))
      (let_statement
        pattern: (pattern
          (identifier_pattern
            (identifier)))
        value: (binary_expression
          (binary_expression
            (identifier)
            (integer_literal))
          (identifier))))))
